[gd_scene load_steps=12 format=3 uid="uid://hvw2tjk7rxpp"]

[ext_resource type="Script" path="res://Enemies/Oposum/oposum.gd" id="1_3m2ad"]
[ext_resource type="Texture2D" uid="uid://b3qsnu86qjb8v" path="res://Enemies/Oposum/oposum.png" id="1_dpmf7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_kweho"]
atlas = ExtResource("1_dpmf7")
region = Rect2(180, 0, 36, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_ocnlb"]
atlas = ExtResource("1_dpmf7")
region = Rect2(0, 0, 36, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_6f4tl"]
atlas = ExtResource("1_dpmf7")
region = Rect2(36, 0, 36, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_khukr"]
atlas = ExtResource("1_dpmf7")
region = Rect2(72, 0, 36, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_sc3mw"]
atlas = ExtResource("1_dpmf7")
region = Rect2(108, 0, 36, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_0xm8g"]
atlas = ExtResource("1_dpmf7")
region = Rect2(144, 0, 36, 28)

[sub_resource type="SpriteFrames" id="SpriteFrames_fblae"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kweho")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ocnlb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6f4tl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_khukr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sc3mw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0xm8g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kweho")
}],
"loop": true,
"name": &"new_animation",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xrgh4"]
size = Vector2(2, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hd0jr"]
size = Vector2(27, 16)

[node name="Oposum" type="CharacterBody2D"]
collision_layer = 15
script = ExtResource("1_3m2ad")
health = null
score = null
speed = null
gravity = null

[node name="Sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_fblae")
animation = &"new_animation"
autoplay = "new_animation"

[node name="RayCast2D" type="RayCast2D" parent="Sprite"]
position = Vector2(-15, 14)
target_position = Vector2(0, 5)

[node name="HitPoint" type="Area2D" parent="Sprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/HitPoint"]
position = Vector2(-16, 5)
shape = SubResource("RectangleShape2D_xrgh4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.5, 5)
scale = Vector2(-1, 1)
shape = SubResource("RectangleShape2D_hd0jr")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="animation_finished" from="Sprite" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="Sprite/HitPoint" to="." method="_on_area_hit_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
